--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "npm run clean && npm run build && npm run createCname && npm run push",
     "postversion": "npm run build && git push && git push --tags && npm run deploy",
     "flickr": "node scripts/processFlickr.mjs",
+    "lint": "eslint src",
     "format": "prettier-eslint \"{src,scripts}/**/*.{js,mjs,json}\""
   },
   "repository": {
@@ -34,7 +35,6 @@
     "react-dnd-html5-backend": "^15.1.2",
     "react-dnd-touch-backend": "^15.1.1",
     "react-dom": "^17.0.2",
-    "react-html-parser": "^2.0.2",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0"
   },
@@ -50,6 +50,12 @@
     "@rollup/plugin-url": "^6.1.0",
     "@svgr/rollup": "^6.2.1",
     "autoprefixer": "^10.4.4",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "node-fetch": "^3.2.4",
     "prettier": "^2.6.2",
     "prettier-eslint-cli": "^6.0.1",
