--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "npm run clean && npm run build && npm run createCname && npm run push",
     "postversion": "npm run build && git push && git push --tags && npm run deploy",
     "flickr": "node scripts/processFlickr.mjs",
+    "lint:style": "stylelint \"src/**/*.css\"",
     "lint": "eslint src",
     "format": "prettier-eslint \"{src,scripts}/**/*.{js,mjs,json}\""
   },
@@ -66,6 +67,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "stylelint": "^14.8.5",
+    "stylelint-config-recommended": "^7.0.0"
   }
 }
