--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -1,4 +1,4 @@
-name: Example Rollup React Component NPM Package
+name: collegehill.io
 
 on:
   release:
@@ -44,75 +44,3 @@ jobs:
         run: npm run build
       - name: Check That Build Is ES5 Compatible
         run: npm run is-build-es5
-  coverage:
-    name: Code Coverage
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.ref }}
-      - name: Setup Node
-        uses: actions/setup-node@v1
-      - name: Install dependencies
-        run: npm ci
-      - name: Run Tests
-        run: npm run test
-      - name: Codecov
-        uses: codecov/codecov-action@v1
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/master' }}
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.ref }}
-      - name: Setup Node
-        uses: actions/setup-node@v1
-      - name: Install dependencies
-        run: npm ci
-      - name: Run Build
-        run: npm run build
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
-        with:
-          semantic_version: 16
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/master' }}
-    needs: release
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.ref }}
-      - name: Setup Node
-        uses: actions/setup-node@v1
-      - name: Install dependencies
-        run: npm ci
-      - name: Run Build
-        run: npm run build
-      - name: Deploy Storybook
-        run: npm run deploy-storybook-ci
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
-    © 2022 GitHub, Inc.
-
-    Terms
-    Privacy
-    Security
-    Status
-    Docs
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
