--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "personal-site",
-  "version": "1.1.4",
-  "description": "A simple app for finding all your daily Wordle games!",
+  "description": "collegehill.io",
   "scripts": {
     "clean": "rm -rf build/",
     "build": "NODE_ENV=production rollup -c rollup.config.js",
