Fix typo, update gallery CSS

--- a/src/routes/virtual-photography/config.json
+++ b/src/routes/virtual-photography/config.json
@@ -1111,7 +1111,7 @@
     "re4-noire": {
       "title": "Resident Evil 4 Noire",
       "year": 2016,
-      "description": "Captured at 1080p on PC. The black and white filter was done by modding the tone mapping feature added to the Ultimate HD version. I played thgrough the entire game like this!",
+      "description": "Captured at 1080p on PC. The black and white filter was done by modding the tone mapping feature added to the Ultimate HD version. I played through the entire game like this!",
       "images": [
         {
           "url": "https://live.staticflickr.com/1677/23592508574_241aed6003_o.jpg",
