--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^4.0.0",
     "node-fetch": "^3.2.4",
     "prettier": "^2.6.2",
     "prettier-eslint-cli": "^6.0.1",
