update image gallery data

--- a/src/routes/virtual-photography/config.json
+++ b/src/routes/virtual-photography/config.json
@@ -116,11 +116,6 @@
           "title": "Bloody Finger Hunter Yura #1"
         },
         {
-          "url": "https://live.staticflickr.com/65535/52047558557_520e32fc71_o.png",
-          "thumbnail": "https://live.staticflickr.com/65535/52047558557_e26b576d4a.jpg",
-          "title": "Elden Ring - Bloody Finger Hunter Yura"
-        },
-        {
           "url": "https://live.staticflickr.com/65535/52047561677_d6227b2bcb_o.png",
           "thumbnail": "https://live.staticflickr.com/65535/52047561677_d451083cd2.jpg",
           "title": "Elden Ring - Gostoc"
@@ -128,27 +123,17 @@
         {
           "url": "https://live.staticflickr.com/65535/52051835007_b931c753c0_o.png",
           "thumbnail": "https://live.staticflickr.com/65535/52051835007_7ce875c03d.jpg",
-          "title": "Elden Ring Super-Resolution 2022.05.03 - 10.52.52.42"
+          "title": "Gideon #2"
         },
         {
           "url": "https://live.staticflickr.com/65535/52051832012_158dba8723_o.png",
           "thumbnail": "https://live.staticflickr.com/65535/52051832012_f1754aabb2.jpg",
-          "title": "Elden Ring Super-Resolution 2022.05.03 - 11.28.15.87"
+          "title": "Fia"
         },
         {
           "url": "https://live.staticflickr.com/65535/52053371100_368617c07b_o.png",
           "thumbnail": "https://live.staticflickr.com/65535/52053371100_003ba95dc6.jpg",
-          "title": "Elden Ring Super-Resolution 2022.05.01 - 00.55.43.47"
-        },
-        {
-          "url": "https://live.staticflickr.com/65535/51989827444_4092c2ae91_o.png",
-          "thumbnail": "https://live.staticflickr.com/65535/51989827444_462622a4ee.jpg",
-          "title": "Elden Ring"
-        },
-        {
-          "url": "https://live.staticflickr.com/65535/51989543001_ec33237a14_o.png",
-          "thumbnail": "https://live.staticflickr.com/65535/51989543001_d6ddce1d63.jpg",
-          "title": "Elden Ring"
+          "title": "Patches"
         },
         {
           "url": "https://live.staticflickr.com/65535/52069242140_5a77815106_o.png",
