--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "description": "collegehill.io",
   "scripts": {
     "clean": "rm -rf build/",
-    "build": "NODE_ENV=production rollup -c rollup.config.js",
-    "dev": "NODE_ENV=development rollup -c rollup.config.js -w",
     "start": "npm run dev",
     "createCname": "touch build/CNAME && echo 'collegehill.io' > build/CNAME",
     "push": "git subtree split --prefix build -b gh-pages && git push -f origin gh-pages:gh-pages && git branch -D gh-pages",
-    "deploy": "npm run clean && npm run build && npm run createCname && npm run push",
+    "deploy:old": "npm run clean && npm run build && npm run createCname && npm run push",
     "postversion": "npm run build && git push && git push --tags && npm run deploy",
     "flickr": "node scripts/processFlickr.mjs",
     "lint:style": "stylelint \"src/**/*.css\"",
@@ -16,7 +14,16 @@
     "lint:js": "eslint src",
     "lint": "npm run lint:js && npm run lint:style",
     "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'",
-    "format": "prettier-eslint --write -l error \"{src,scripts}/**/*.{js,mjs,json}\""
+    "format": "prettier-eslint --write -l error \"{src,scripts}/**/*.{js,mjs,json}\"",
+
+    "develop": "gatsby develop",
+    "dev": "npm run develop",
+    "start-g": "gatsby develop",
+    "build": "gatsby build",
+    "serve-g": "gatsby serve",
+    "clean-g": "gatsby clean",
+
+    "deploy": "gatsby build && gh-pages -f -d public"
   },
   "repository": {
     "type": "git",
@@ -34,24 +41,24 @@
     "hex-rgb": "^5.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-youtube": "^9.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.52.3",
     "save": "^2.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^21.0.2",
-    "@rollup/plugin-html": "^0.2.4",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-url": "^6.1.0",
     "@svgr/rollup": "^6.2.1",
+    "gatsby": "^4.16.0",
+    "gatsby-plugin-manifest": "^4.16.0",
+    "gatsby-plugin-react-helmet": "^5.16.0",
+    "gatsby-plugin-sass": "^5.16.0",
+    "gatsby-plugin-sitemap": "^5.16.0",
     "autoprefixer": "^10.4.4",
     "es-check": "^6.2.1",
     "eslint": "^8.16.0",
@@ -60,18 +67,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gatsby": "^4.16.0",
     "gh-pages": "^4.0.0",
     "node-fetch": "^3.2.4",
     "prettier": "^2.6.2",
     "prettier-eslint-cli": "^6.0.1",
-    "rollup": "^2.75.5",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-polyfill-node": "^0.9.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2",
     "stylelint": "^14.8.5",
     "stylelint-config-recommended": "^7.0.0"
   }
