--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "lint": "npm run lint:js && npm run lint:style",
     "is-build-es5": "npx es-check es5 './build/**/*.!(esm).js'",
     "format": "prettier-eslint --write -l error \"{src,scripts}/**/*.{js,mjs,json}\"",
-
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve-g": "gatsby serve",
     "clean": "gatsby clean",
-
     "deploy": "gatsby clean && gatsby build && gh-pages -f -d public"
   },
   "repository": {
@@ -38,24 +36,20 @@
     "hex-rgb": "^5.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react-modal": "^3.15.1",
-    "react-router-dom": "^6.3.0",
-    "react-youtube": "^9.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
+    "react-youtube": "^9.0.2",
     "sass": "^1.52.3",
-    "save": "^2.5.0"
+    "save": "^2.5.0",
+    "title-case": "^3.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@svgr/rollup": "^6.2.1",
-    "gatsby": "^4.16.0",
-    "gatsby-plugin-manifest": "^4.16.0",
-    "gatsby-plugin-react-helmet": "^5.16.0",
-    "gatsby-plugin-sass": "^5.16.0",
-    "gatsby-plugin-sitemap": "^5.16.0",
     "autoprefixer": "^10.4.4",
     "es-check": "^6.2.1",
     "eslint": "^8.16.0",
@@ -65,6 +59,10 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "gatsby": "^4.16.0",
+    "gatsby-plugin-manifest": "^4.16.0",
+    "gatsby-plugin-react-helmet": "^5.16.0",
+    "gatsby-plugin-sass": "^5.16.0",
+    "gatsby-plugin-sitemap": "^5.16.0",
     "gh-pages": "^4.0.0",
     "node-fetch": "^3.2.4",
     "prettier": "^2.6.2",
