--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react-modal": "^3.15.1",
     "react-youtube": "^9.0.2",
     "sass": "^1.52.3",
-    "save": "^2.5.0",
-    "title-case": "^3.0.3"
+    "save": "^2.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
