--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "react-helmet": "^6.1.0",
     "react-modal": "^3.15.1",
     "react-youtube": "^9.0.2",
-    "sass": "^1.52.3",
-    "save": "^2.5.0"
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
