--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "git+https://github.com/rapka/personal-site.git"
   },
   "license": "MIT",
-  "author": "Richard Adjogah <richard.adjogah@gmail.com> (https://collegehill.io/)",
+  "author": "Rae A <thecollegehill@gmail.com> (https://collegehill.io/)",
   "bugs": {
     "url": "https://github.com/rapka/personal-site/issues"
   },
